# cetools

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.markdown  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  test_cli.py
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.specify/: extensions.yml  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
cetools/: __init__.py  __main__.py
cetools/cli/: __init__.py  __main__.py
cetools/core/: __init__.py  config.py  creation.py  dice.py  models.py  serialization.py  utils.py
copilot-documents/: project-implementation.md  project-specification.md
docs/adr/: 0001-no-term-module.md
scripts/: check_docs.py
specs/001-navy-character-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-scout-career-character/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-aerospace-system-defense-career/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-isort-quality-gate/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-marine-career/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-universal-character-format/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_aerospace_career.py  test_agent_career.py  test_aging.py  test_athlete_career.py  test_background.py  test_barbarian_career.py  test_belter_career.py  test_benefits.py  test_bureaucrat_career.py  test_careers.py  test_characters.py  test_cli.py  test_colonist_career.py  test_config.py  test_creation.py  test_creation_cli.py  test_dice.py  test_diplomat_career.py  test_drifter_career.py  test_entertainer_career.py  test_formatter.py  test_generator.py  test_hunter_career.py  test_marine_career.py  test_maritime_career.py  test_mercenary_career.py  test_merchant_career.py  test_mishaps.py  test_models.py  test_names.py  test_noble_career.py  test_physician_career.py  test_pirate_career.py  test_pseudohex.py  test_psionics.py  test_ranks.py  test_rogue_career.py  test_rolls.py  test_rules.py  (+11 more)
(+156 files in other folders)
